# multi_view_stereo_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  background_subtraction.cpp  background_subtraction.py  benchmark.py  benchmark_run_pmvs2  bootstrap.sh  camera_models.py  camera_models_test.py  compare_clouds.cpp  compare_clouds.py  debug_halcon_radial_distortion.hdev  flamegraph_pmvs.sh  load_camera_info.py  load_camera_info_test.py  load_ply.py  load_ply_test.py  radial_distortion.py  reconstruct.py  reconstruct_gipuma.py  reconstruct_opencv.py  reconstruct_opencv.sh  reconstruct_pmvs2.py  tune_opencv.py  tune_pmvs2.py  undistort_images.py
data_for_unit_tests/: intrinsics_undistorted.txt  load_halcon_extrinsics_test.hdev
data_for_unit_tests/extrinsics_for_testing/: extrinsics_camera01_homogeneous.txt  extrinsics_camera01_rodriguez.txt  extrinsics_camera02_homogeneous.txt  extrinsics_camera02_rodriguez.txt  extrinsics_camera03_homogeneous.txt  extrinsics_camera03_rodriguez.txt  extrinsics_camera04_homogeneous.txt  extrinsics_camera04_rodriguez.txt  extrinsics_camera05_homogeneous.txt  extrinsics_camera05_rodriguez.txt  extrinsics_camera06_homogeneous.txt  extrinsics_camera06_rodriguez.txt  extrinsics_camera07_homogeneous.txt  extrinsics_camera07_rodriguez.txt  extrinsics_camera08_homogeneous.txt  extrinsics_camera08_rodriguez.txt  extrinsics_camera09_homogeneous.txt  extrinsics_camera09_rodriguez.txt  extrinsics_camera10_homogeneous.txt  extrinsics_camera10_rodriguez.txt  extrinsics_camera11_homogeneous.txt  extrinsics_camera11_rodriguez.txt  extrinsics_camera12_homogeneous.txt  extrinsics_camera12_rodriguez.txt
